--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -12,6 +12,9 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
@@ -44,4 +47,4 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/xunholy/kustomize-mutating-webhook:latest
+            ghcr.io/${{ github.repository_owner }}/kustomize-mutating-webhook:latest
