--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -47,4 +47,4 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/kustomize-mutating-webhook:latest
+            ghcr.io/xunholy/kustomize-mutating-webhook:latest
