fix: set default node architectur selector
Signed-off-by: Michael Fornaro <20387402+xUnholy@users.noreply.github.com>

--- a/kubernetes/static/deployment.yaml
+++ b/kubernetes/static/deployment.yaml
@@ -16,6 +16,8 @@ spec:
       labels:
         <<: *labels
     spec:
+      nodeSelector:
+        kubernetes.io/arch: "amd64"
       serviceAccountName: kustomize-mutating-webhook
       automountServiceAccountToken: true
       securityContext:
